--- a/2022-08-15/index.html
+++ b/2022-08-15/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-      console.log("From Inside ");
+      //console.log("Test");
+      /*
+      console.log("Test");
+      console.log("Test");
+      */
     </script>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Quizlet - August 15th</h1>
+    <h1>Hello World</h1>
     <script src="./script.js"></script>
+    <script src="./javascript.js"></script>
   </body>
 </html>
